--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,13 +7,11 @@
 # documentation.
 
 name: Java CI with Maven
-
 on:
   push:
-    branches: [ "master" ]
+    branches: [ master ]
   pull_request:
-    branches: [ "master" ]
-
+    branches: [ master ]
 jobs:
   build:
     runs-on: ubuntu-latest
