--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Copy Cucumber JSON Report
       run: |
           cd target
-          cp Report/
+          cp cucumber.json ../cucumber/
       
     - name: Commit Files Report # transfer the new html files back into the repository
       run: |
